Demo/platforms/ios/build/emulator/metadata-generation-stderr-i386.txt
clang version 3.7.0 (tags/RELEASE_370/final)
Target: i386-apple-darwin
Thread model: posix
clang Invocation:
 "clang-tool" "-cc1" "-triple" "i386-apple-ios7.0.0" "-fsyntax-only" "-disable-free" "-disable-llvm-verifier" "-main-file-name" "umbrella.h" "-mrelocation-model" "pic" "-pic-level" "2" "-mthread-model" "posix" "-mdisable-fp-elim" "-masm-verbose" "-target-cpu" "yonah" "-target-linker-version" "242.2" "-v" "-dwarf-column-info" "-resource-dir" "../lib/clang/3.7.0" "-isysroot" "/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator9.2.sdk" "-D" "DEBUG=1" "-I" "/Users/mehfuz/Source/Telerik/Beacon/Demo/platforms/ios/build/emulator/include" "-I" "/Users/mehfuz/Source/Telerik/Beacon/Demo/platforms/ios/internal" "-I" "/Users/mehfuz/Source/Telerik/Beacon/Demo/platforms/ios/internal/NativeScript/include" "-I" "/Users/mehfuz/Source/Telerik/Beacon/Demo/platforms/ios/../../lib/iOS/include/libEstimoteSDK" "-F/Users/mehfuz/Source/Telerik/Beacon/Demo/platforms/ios/build/emulator" "-F/Users/mehfuz/Source/Telerik/Beacon/Demo/platforms/ios/../../lib/iOS" "-Wno-unknown-pragmas" "-Wno-ignored-attributes" "-std=gnu99" "-fdebug-compilation-dir" "/Users/mehfuz/Source/Telerik/Beacon/Demo/platforms/ios/internal/metadata-generator/bin" "-ferror-limit" "0" "-fmessage-length" "0" "-stack-protector" "1" "-mstackrealign" "-fblocks" "-fimplicit-module-maps" "-fobjc-runtime=ios-7.0.0" "-fencode-extended-block-signature" "-fobjc-exceptions" "-fexceptions" "-fmax-type-align=16" "-fdiagnostics-show-option" "-x" "objective-c" "umbrella.h"

ignoring nonexistent directory "/Users/mehfuz/Source/Telerik/Beacon/Demo/platforms/ios/build/emulator/include"
ignoring nonexistent directory "/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator9.2.sdk/usr/local/include"
ignoring nonexistent directory "/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator9.2.sdk/Library/Frameworks"
#include "..." search starts here:
#include <...> search starts here:
 /Users/mehfuz/Source/Telerik/Beacon/Demo/platforms/ios/internal
 /Users/mehfuz/Source/Telerik/Beacon/Demo/platforms/ios/internal/NativeScript/include
 /Users/mehfuz/Source/Telerik/Beacon/Demo/platforms/ios/../../lib/iOS/include/libEstimoteSDK
 /Users/mehfuz/Source/Telerik/Beacon/Demo/platforms/ios/build/emulator (framework directory)
 /Users/mehfuz/Source/Telerik/Beacon/Demo/platforms/ios/../../lib/iOS (framework directory)
 ../lib/clang/3.7.0/include
 /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator9.2.sdk/usr/include
 /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator9.2.sdk/System/Library/Frameworks (framework directory)
End of search list.
clang version 3.7.0 (tags/RELEASE_370/final)
Target: i386-apple-darwin
Thread model: posix
clang Invocation:
 "clang-tool" "-cc1" "-triple" "i386-apple-ios7.0.0" "-fsyntax-only" "-disable-free" "-disable-llvm-verifier" "-main-file-name" "umbrella.h" "-mrelocation-model" "pic" "-pic-level" "2" "-mthread-model" "posix" "-mdisable-fp-elim" "-masm-verbose" "-target-cpu" "yonah" "-target-linker-version" "242.2" "-v" "-dwarf-column-info" "-resource-dir" "../lib/clang/3.7.0" "-isysroot" "/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator9.2.sdk" "-D" "DEBUG=1" "-I" "/Users/mehfuz/Source/Telerik/Beacon/Demo/platforms/ios/build/emulator/include" "-I" "/Users/mehfuz/Source/Telerik/Beacon/Demo/platforms/ios/internal" "-I" "/Users/mehfuz/Source/Telerik/Beacon/Demo/platforms/ios/internal/NativeScript/include" "-I" "/Users/mehfuz/Source/Telerik/Beacon/Demo/platforms/ios/../../lib/iOS/include/libEstimoteSDK" "-F/Users/mehfuz/Source/Telerik/Beacon/Demo/platforms/ios/build/emulator" "-F/Users/mehfuz/Source/Telerik/Beacon/Demo/platforms/ios/../../lib/iOS" "-Wno-unknown-pragmas" "-Wno-ignored-attributes" "-std=gnu99" "-fdebug-compilation-dir" "/Users/mehfuz/Source/Telerik/Beacon/Demo/platforms/ios/internal/metadata-generator/bin" "-ferror-limit" "0" "-fmessage-length" "0" "-stack-protector" "1" "-mstackrealign" "-fblocks" "-fimplicit-module-maps" "-fobjc-runtime=ios-7.0.0" "-fencode-extended-block-signature" "-fobjc-exceptions" "-fexceptions" "-fmax-type-align=16" "-fdiagnostics-show-option" "-x" "objective-c" "umbrella.h"

clang -cc1 version 3.7.0 based upon LLVM 3.7.0 default target x86_64-apple-darwin15.3.0
ignoring nonexistent directory "/Users/mehfuz/Source/Telerik/Beacon/Demo/platforms/ios/build/emulator/include"
ignoring nonexistent directory "/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator9.2.sdk/usr/local/include"
ignoring nonexistent directory "/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator9.2.sdk/Library/Frameworks"
#include "..." search starts here:
#include <...> search starts here:
 /Users/mehfuz/Source/Telerik/Beacon/Demo/platforms/ios/internal
 /Users/mehfuz/Source/Telerik/Beacon/Demo/platforms/ios/internal/NativeScript/include
 /Users/mehfuz/Source/Telerik/Beacon/Demo/platforms/ios/../../lib/iOS/include/libEstimoteSDK
 /Users/mehfuz/Source/Telerik/Beacon/Demo/platforms/ios/build/emulator (framework directory)
 /Users/mehfuz/Source/Telerik/Beacon/Demo/platforms/ios/../../lib/iOS (framework directory)
 ../lib/clang/3.7.0/include
 /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator9.2.sdk/usr/include
 /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator9.2.sdk/System/Library/Frameworks (framework directory)
End of search list.
In file included from umbrella.h:768:
/Users/mehfuz/Source/Telerik/Beacon/Demo/platforms/ios/../../lib/iOS/include/libEstimoteSDK/ESTDateRule.h:45:43: error: expected ';' after method prototype
+ (instancetype)hourBetween:(int)firstHour and:(int)secondHour;
                                          ^
                                          ;
In file included from umbrella.h:779:
/Users/mehfuz/Source/Telerik/Beacon/Demo/platforms/ios/../../lib/iOS/include/libEstimoteSDK/ESTTemperatureRule.h:21:52: error: expected ';' after method prototype
+ (instancetype)temperatureBetween:(double)minValue and:(double)maxValue forNearableIdentifier:(NSString *)identifier;
                                                   ^
                                                   ;
/Users/mehfuz/Source/Telerik/Beacon/Demo/platforms/ios/../../lib/iOS/include/libEstimoteSDK/ESTTemperatureRule.h:25:52: error: expected ';' after method prototype
+ (instancetype)temperatureBetween:(double)minValue and:(double)maxValue forNearableType:(ESTNearableType)type;
                                                   ^
                                                   ;
3 errors generated.
